[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
solana-program = "1.10.20"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.31"

[lib]
crate-type = ["cdylib", "lib"]
